@startuml

class BJCheessPizza
class BJPepperPizza
class LDCheessPizza
class LDPepperPizza
class Pizza {
void prepare()
void bake()
void cut()
void box()
}
Pizza <|-- BJCheessPizza
Pizza <|-- BJPepperPizza
Pizza <|-- LDCheessPizza
Pizza <|-- LDPepperPizza

class BJOrderPizza
class LDOrderPizza


BJCheessPizza <|-- BJOrderPizza
BJPepperPizza <|-- BJOrderPizza
LDCheessPizza <|-- LDOrderPizza
LDPepperPizza <|-- LDOrderPizza

class OrderPizza{
Pizza createPizza()
}
OrderPizza <|-- BJOrderPizza
OrderPizza <|-- LDOrderPizza
@enduml